# meeting-copilot

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/bussit/: config.json  learnings.json  tasks.json  workers.json
.planning/phases/01-scaffold-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-context-engine/: 02-01-PLAN.md  (+12 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  TRANSCRIPT-SOURCES.md
deploy/: deploy-engine.sh  meeting-copilot-engine.service
deploy/nginx/: meeting-copilot.conf
engine/: .env.example  .gitignore  api.py  config.py  main.py  models.py  pyproject.toml  requirements.txt  ws_handler.py
engine/bridge/: watcher_bridge.py
engine/context/: __init__.py  assembler.py  contacts.py  fireflies.py  git_activity.py  linear_client.py  models.py  profiles.py
engine/intelligence/: __init__.py  followup_email.py  meeting_classifier.py  prior_context.py  summary_generator.py
engine/intent/: __init__.py  detector.py  fallback_chain.py  models.py  prompts.py
engine/orchestration/: __init__.py  fleet_spawner.py  task_tracker.py
engine/routing/: __init__.py  linear_router.py  project_resolver.py
engine/tests/: __init__.py  test_e2e_flow.py
panel/: .gitignore  package-lock.json  package.json  vercel.json  vite.config.ts
panel/public/: robots.txt  sitemap.xml
panel/src/: App.tsx
(+52 files in other folders)
