[project]
name = "meeting-copilot-engine"
version = "0.1.0"
description = "Meeting Copilot AI engine — WebSocket + REST API"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["config", "api", "models", "ws_handler", "context"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
